Implement more tests.