@@ -25,8 +25,6 @@
  * @test
  * @library /test/lib
  * @modules jdk.compiler
- *          java.scripting
- *          jdk.zipfs
  * @build PatchTest
  *        jdk.test.lib.compiler.CompilerUtils
  *        jdk.test.lib.util.JarUtils
@@ -36,47 +34,62 @@
  * @summary Runs tests that make use of automatic modules
  */
 
+import java.io.File;
+import java.util.List;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import jdk.test.lib.compiler.CompilerUtils;
 import jdk.test.lib.util.JarUtils;
 import static jdk.test.lib.process.ProcessTools.*;
 
 import org.testng.annotations.Test;
+import org.testng.annotations.BeforeClass;
 import static org.testng.Assert.*;
 
-@Test
 public class PatchTest {
 
+    private static final String APP_NAME = "myapp";
+
     private static final String MODULE_NAME = "somelib";
-    private static final String PATCH_NAME = "somelibTest";
-    private static final String MAIN_CLASS = "somelib.test.TestMain";
+
+    private static final String PATCH1_NAME = "patch1";
+    private static final String PATCH2_NAME = "patch2";
+
+    private static final String APP_MAIN = "myapp.Main";
+    private static final String PATCH1_MAIN = "somelib.test.TestMain";
+    private static final String PATCH2_MAIN = "somelib.Dummy";
 
     private static final String TEST_SRC = System.getProperty("test.src");
 
-    private static final Path SOMELIB_SRC = Paths.get(TEST_SRC, MODULE_NAME);
-    private static final Path SOMELIB_TEST_SRC = Paths.get(TEST_SRC, PATCH_NAME);
-    private static final Path SOMELIB_CLASSES = Paths.get("classes", MODULE_NAME);
-    private static final Path SOMELIB_TEST_CLASSES = Paths.get("classes", PATCH_NAME);
-    private static final Path SOMELIB_JAR = Paths.get("mods", MODULE_NAME + "-0.19.jar");
+    private static final Path APP_SRC = Path.of(TEST_SRC, APP_NAME);
+    private static final Path APP_CLASSES = Path.of("classes", APP_NAME);
+    private static final Path SOMELIB_SRC = Path.of(TEST_SRC, MODULE_NAME);
+    private static final Path SOMELIB_PATCH1_SRC = Path.of(TEST_SRC, PATCH1_NAME);
+    private static final Path SOMELIB_PATCH2_SRC = Path.of(TEST_SRC, PATCH2_NAME);
+    private static final Path SOMELIB_CLASSES = Path.of("classes", MODULE_NAME);
+    private static final Path SOMELIB_PATCH1_CLASSES = Path.of("classes", PATCH1_NAME);
+    private static final Path SOMELIB_PATCH2_CLASSES = Path.of("classes", PATCH2_NAME);
+    private static final Path SOMELIB_JAR = Path.of("mods", MODULE_NAME + "-0.19.jar");
+
+    private static final String MODULE_PATH = String.join(File.pathSeparator, SOMELIB_JAR.toString(), APP_CLASSES.toString());
 
     /**
      * Test using --patch-module with main class in a new package in the patch
      *
-     * The consists of 1 module:
+     * The consists of 2 modules:
      *
      * somelib - dummy automatic module.
+     * myapp - explicit module, uses somelib
      *
-     * And one patch:
+     * And two patches:
      *
-     * somelibTest - contains the test logic to test somelib
+     * patch1 - adds an additional package.
+     * patch2 - only replaces existing classes.
      *
-     * The test patches somelib with somelibTest.
      */
-
-    public void testPatchModule() throws Exception {
+    @BeforeClass
+    public void compile() throws Exception {
         boolean compiled;
 
         // create mods/somelib-0.19.jar
@@ -87,28 +100,76 @@ public class PatchTest {
         JarUtils.createJarFile(SOMELIB_JAR, SOMELIB_CLASSES);
 
 
-        // compile patch
-
-        compiled = CompilerUtils.compile(SOMELIB_TEST_SRC, SOMELIB_TEST_CLASSES,
+        // compile patch 1
+        compiled = CompilerUtils.compile(SOMELIB_PATCH1_SRC, SOMELIB_PATCH1_CLASSES,
                         "--module-path", SOMELIB_JAR.toString(),
                         "--add-modules", MODULE_NAME,
-                        "--patch-module", MODULE_NAME + "=" + SOMELIB_TEST_CLASSES);
-
+                        "--patch-module", MODULE_NAME + "=" + SOMELIB_PATCH1_SRC);
         assertTrue(compiled);
 
+        // compile patch 2
+        compiled = CompilerUtils.compile(SOMELIB_PATCH2_SRC, SOMELIB_PATCH2_CLASSES,
+                        "--module-path", SOMELIB_JAR.toString(),
+                        "--add-modules", MODULE_NAME,
+                        "--patch-module", MODULE_NAME + "=" + SOMELIB_PATCH2_SRC);
+        assertTrue(compiled);
 
-        // launch the test
+        // compile app
+        compiled = CompilerUtils.compile(APP_SRC, APP_CLASSES,
+                        "--module-path", SOMELIB_JAR.toString());
+        assertTrue(compiled);
+    }
 
+    @Test
+    public void modulePathExtend() throws Exception {
         int exitValue
-            = executeTestJava("--module-path", SOMELIB_JAR.toString(),
-                              "--patch-module", MODULE_NAME + "=" + SOMELIB_TEST_CLASSES,
-                              "-m", MODULE_NAME + "/" + MAIN_CLASS)
+            = executeTestJava("--module-path", MODULE_PATH,
+                              "--patch-module", MODULE_NAME + "=" + SOMELIB_PATCH1_CLASSES,
+                              "-m", APP_NAME + "/" + APP_MAIN, "patch1")
                 .outputTo(System.out)
                 .errorTo(System.out)
                 .getExitValue();
 
         assertTrue(exitValue == 0);
+    }
 
+    @Test
+    public void modulePathAugment() throws Exception {
+        int exitValue
+            = executeTestJava("--module-path", MODULE_PATH,
+                              "--patch-module", MODULE_NAME + "=" + SOMELIB_PATCH2_CLASSES,
+                              "-m", APP_NAME + "/" + APP_MAIN, "patch2")
+                .outputTo(System.out)
+                .errorTo(System.out)
+                .getExitValue();
+
+        assertTrue(exitValue == 0);
+    }
+
+    @Test
+    public void rootModuleExtend() throws Exception {
+        int exitValue
+            = executeTestJava("--module-path", SOMELIB_JAR.toString(),
+                              "--patch-module", MODULE_NAME + "=" + SOMELIB_PATCH1_CLASSES,
+                              "-m", MODULE_NAME + "/" + PATCH1_MAIN)
+                .outputTo(System.out)
+                .errorTo(System.out)
+                .getExitValue();
+
+        assertTrue(exitValue == 0);
+    }
+
+    @Test
+    public void rootModuleAugment() throws Exception {
+        int exitValue
+            = executeTestJava("--module-path", SOMELIB_JAR.toString(),
+                              "--patch-module", MODULE_NAME + "=" + SOMELIB_PATCH2_CLASSES,
+                              "-m", MODULE_NAME + "/" + PATCH2_MAIN)
+                .outputTo(System.out)
+                .errorTo(System.out)
+                .getExitValue();
+
+        assertTrue(exitValue == 0);
     }
 
 }
